# hello-triangle

./: .clang-format  .gitignore  CMakeLists.txt  justfile
include/: Camera.hpp  Mesh.hpp  Model.hpp  Projection.hpp  Shader.hpp  Texture.hpp
include/glad/: glad.h
include/stb/: image.h
shaders/: fragment1.glsl  fragment2.glsl  fragment3.glsl  vertex.glsl  vertex1.glsl  vertex2.glsl  vertex3.glsl
src/: Camera.cpp  Mesh.cpp  Model.cpp  Projection.cpp  Shader.cpp  Texture.cpp  glad.c  main.cpp
